Improved tests and docs. Fixed pre-commit warning.

--- a/tox.ini
+++ b/tox.ini
@@ -13,25 +13,19 @@ commands =
     poetry check
     poetry build
     poetry install -v
-    pre-commit run check-toml
-    pre-commit run check-yaml
-    pre-commit run check-json
+    poetry run pre-commit run check-toml
+    poetry run pre-commit run check-yaml
+    poetry run pre-commit run check-json
     poetry run pytest --cov-report term-missing --cov=tyrannosaurus tests/
     poetry run bandit -r tyrannosaurus
     poetry run bandit -r tests --skip B101
-    - mypy tyrannosaurus
-    - mypy docs
-    - mypy tests
+    - poetry run mypy tyrannosaurus
+    - poetry run mypy docs
+    - poetry run mypy tests
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
     sphinx-build -b html docs docs/html
-    - rm -r tyrannosaurus.egg-info
-    - rm -r .pytest_cache
-    - rm -r tests/.pytest_cache
-    - rm -r .tyrannosaurus
-    - rm -r eggs
-    - rm -r cython_debug
 
 
 [coverage:run]
