--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -1,6 +1,9 @@
 name: Test on pull request
 on:
   pull_request:
+    branches:
+      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
