--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -29,13 +29,11 @@ commands =
     poetry run bandit -r tests --skip B101
     - poetry run flake8 ${pkg}
     - poetry run flake8 docs
-    - mypy ${pkg}
-    - mypy docs
-    - mypy tests
+    - poetry run mypy ${pkg}
+    - poetry run mypy docs
+    - poetry run mypy tests
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
-    sphinx-build -b html docs docs/html
-    - rm -r ${pkg}.egg-info
-    - rm -r .pytest_cache
+    poetry run sphinx-build -b html docs docs/html
 
 
 [coverage:run]
