Added what I learned from conda-forge.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.8.9"
+version = "0.8.10"
 description = "Generate elegant, bleeding-edge, ready-to-use Python projects with seamless CI/CD, fit for 2021+."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -59,6 +59,7 @@ Download = "https://pypi.org/project/tyrannosaurus/"
 
 [tool.tyrannosaurus.options]
 align = true
+sort  = true
 
 [tool.tyrannosaurus.sources]
 metavm             = "'ubuntu-latest'"
