--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
       - id: check-json
       - id: check-yaml
         exclude: ^recipes/.*
+  - repo: 'https://github.com/Lucas-C/pre-commit-hooks-nodejs'
+    rev: v1.1.1
+    hooks:
+      - id: dockerfile_lint
