--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.8.10"
-description = "Generate elegant, bleeding-edge, ready-to-use Python projects with seamless CI/CD, fit for 2021+."
+version = "0.9.0"
+description = "Generate beautifully modern Python projects with seamless, Github-based CI/CD and loads of integrations."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
 license = "Apache-2.0"
@@ -62,7 +62,8 @@ align = true
 sort  = true
 
 [tool.tyrannosaurus.sources]
-metavm             = "'ubuntu-latest'"
+metavm             = "'ubuntu-20.04'"
+metavmbox          = "'ubuntu/focal64'"
 pymetaversion      = "'3.9'"
 pycompatversions   = "tool.poetry.dependencies"
 pytoxversions      = "tool.poetry.dependencies"
