--- a/tyrannosaurus/resources/tox.ini
+++ b/tyrannosaurus/resources/tox.ini
@@ -2,7 +2,9 @@
 minversion = 3.20
 isolated_build = True
 # this refers to [tool.poetry.extras.dev] in pyproject.toml
-extras = dev
+# you probably don't need this line because poetry will install them
+# in the commands list
+# extras = dev
 # which Python version to use
 envlist = py39
 
@@ -20,16 +22,16 @@ skipdist = True
 commands =
     poetry check
     poetry build
-    poetry install -v
+    poetry install -v --extras "all"
     poetry run pre-commit run check-toml
     poetry run pre-commit run check-yaml
     poetry run pre-commit run check-json
-    poetry run pytest --cov-report term-missing --cov=${pkg} tests/
-    poetry run bandit -r ${pkg}
+    poetry run pytest --cov-report term-missing --cov=$${pkg} tests/
+    poetry run bandit -r $${pkg}
     poetry run bandit -r tests --skip B101
-    - poetry run flake8 ${pkg}
+    - poetry run flake8 $${pkg}
     - poetry run flake8 docs
-    - poetry run mypy ${pkg}
+    - poetry run mypy $${pkg}
     - poetry run mypy docs
     - poetry run mypy tests
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
@@ -37,7 +39,7 @@ commands =
 
 
 [coverage:run]
-source = '${pkg}'
+source = '$${pkg}'
 
 [coverage:html]
 directory = .coverage_report
