fix: link and parse problems

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -153,14 +153,20 @@ sphinx-autoapi           = "^1"
 sphinx-rtd-theme         = ">=0.5, <1.0"
 
 [tool.poetry.extras]
-dev = [
-    "pre-commit", "pre-commit-hooks",
-    "black", "bandit",
-    "pytest", "coverage", "pytest-cov",
-    "flake8", "flake8-docstrings", "flake8-bugbear",
-    "mypy",
-    "sphinx", "sphinx-autoapi"
-]
+
+
+#########################################################################################
+# Testing
+#########################################################################################
+
+# This will be used in a future version of pytest:
+#[tool.pytest]
+
+[tool.pytest.ini_options]
+log_cli = true
+log_cli_level = "INFO"
+log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
+log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
 
 #########################################################################################
