--- a/tests/resources/fake/pyproject.toml
+++ b/tests/resources/fake/pyproject.toml
@@ -47,10 +47,10 @@ sort     = false
 
 [tool.tyrannosaurus.sources]
 # use a literal value ('') or refer to a pyproject setting
-# $${today} is the date you run it at, and ${now} is the datetime
+# $${today} is the date you run it at, and $${now} is the datetime
 status             = "'Development'"
 date               = "'$${today}'"
-copyright          = "'Copyright ${today.year}'"
+copyright          = "'Copyright $${today.year}'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
 pyversions         = "tool.poetry.dependencies"
@@ -110,14 +110,6 @@ flake8-bugbear           = "^20.1"
 [tool.poetry.extras]
 # manually listed
 docs    = ["sphinx", "sphinx-rtd-theme", "sphinx-autoapi"]
-# auto-filled from dev-deps
-dev     = [
-        "pre-commit", "pytest", "coverage", "xdoctest", "hypothesis",
-        "sphinx", "sphinx-autodoc-typehints", "sphinx-autoapi",
-        "mypy",
-        "flake8", "flake8-docstrings", "flake8-bugbear",
-        "black",
-]
 
 
 #########################################################################################
