--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,5 @@
+# Build, test, and publish to releases, packages, PyPi, etc.
+# Runs when creating a Github release
 name: Publish on release creation
 on:
   release:
@@ -15,11 +17,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
           python-version: 3.9
       - name: Install build meta-dependencies
         run: |
-          pip install poetry
+          pip install poetry tox
+      - name: Test with tox
+        run: |
+          tox -v
       - name: Build sdists and wheels with Poetry
         run: |
           poetry build
@@ -27,15 +31,6 @@ jobs:
       - name: Build the Docker image
         run: |
           docker build .
-      # Remove this section if you don't want to publish to Github packages:
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/${{ github.event.repository.name }}
-          tag_with_ref: true
       - name: Attach artifacts to the Github release
         uses: skx/github-action-publish-binaries@master
         with:
