--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -1,8 +1,9 @@
-name: Build & test
+# Runs tests via tox
+# Runs on pull requests to main
+name: Test on pull request
 on:
-  push:
+  pull_request:
     branches:
-      - master
       - main
 jobs:
   build:
@@ -11,7 +12,6 @@ jobs:
       max-parallel: 1
       matrix:
         python-version:
-          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
           - 3.9
     steps:
       - name: Checkout
@@ -20,17 +20,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '${{ matrix.python-version }}'
-      - name: Install build dependencies
+      - name: Install build meta-dependencies
         run: |
-          pip install poetry tox
+          pip install tox poetry
       - name: Test with tox
         run: |
           tox -v
-      - name: Build the Docker image
-        run: |
-          docker build .
-      - name: Update coveralls/codecov
-        run: |
-          pip install coveralls codecov
-          coveralls || true
-          codecov || true
