--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -1,8 +1,9 @@
-name: Test on pull request
+# Build, test, and run static analyses, and send reports to external services
+# Runs only on pushing to main
+name: Build & test
 on:
-  pull_request:
+  push:
     branches:
-      - master
       - main
 jobs:
   build:
@@ -11,7 +12,6 @@ jobs:
       max-parallel: 1
       matrix:
         python-version:
-          # from tyrannosaurus "pymetaversion"; actual versions are handled in Tox
           - 3.9
     steps:
       - name: Checkout
@@ -22,7 +22,15 @@ jobs:
           python-version: '${{ matrix.python-version }}'
       - name: Install build meta-dependencies
         run: |
-          pip install tox poetry
+          pip install poetry tox
       - name: Test with tox
         run: |
           tox -v
+      - name: Build the Docker image
+        run: |
+          docker build .
+      - name: Update coveralls/codecov
+        run: |
+          pip install coveralls codecov
+          coveralls || true
+          codecov || true
