--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,8 @@ align = true
 sort  = true
 
 [tool.tyrannosaurus.sources]
+doc_license        = "'CC BY 4.0'"
+doc_license_url    = "'https://creativecommons.org/licenses/by/4.0'"
 metavm             = "'ubuntu-20.04'"
 metavmbox          = "'ubuntu/focal64'"
 pymetaversion      = "'3.9'"
@@ -69,13 +71,13 @@ pycompatversions   = "tool.poetry.dependencies"
 pytoxversions      = "tool.poetry.dependencies"
 status             = "'Development'"
 date               = "'${today}'"
-copyright          = "'Copyright 2020–2021'"
 version            = "tool.poetry.version"
 release            = "tool.poetry.version"
 devdeps            = "tool.poetry.dev-dependencies"
 precommitvr        = "tool.poetry.dev-dependencies"
 precommitconfigvr  = "tool.poetry.dev-dependencies"
 linelength         = "tool.black.line-length"
+copyright          = "'Douglas Myers-Turnbull 2020–2021'"
 authors            = [
     "Douglas Myers-Turnbull <github:dmyersturnbull,orcid:0000-0003-3610-4808>"
 ]
@@ -150,6 +152,8 @@ flake8-bugbear           = "^20"
 mypy                     = ">=0.790, <1.0"
 sphinx                   = "^3"
 sphinx-autoapi           = "^1"
+sphinxcontrib-bibtex     = ">=2.1,<3.0"
+sphinx-copybutton        = ">=0.3, <1.0"
 sphinx-rtd-theme         = ">=0.5, <1.0"
 
 [tool.poetry.extras]
