--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,6 @@
 sphinx               >=3.0,<4.0
+sphinxcontrib-bibtex >=2.1,<3.0
 sphinx-rtd-theme     >=0.5,<1.0
 sphinx-autoapi       >=1.5,<2.0
+sphinx-copybutton    >=0.3,<1.0
 tomlkit              >=0.7,<1.0
