--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -5,9 +5,10 @@ on:
   pull_request:
     branches:
       - main
+      - master
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
       matrix:
