--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -5,9 +5,10 @@ on:
   push:
     branches:
       - main
+      - master
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
       matrix:
