--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,27 +1,29 @@
 minimum_pre_commit_version: 2.9.0
-
 repos:
-  - repo: meta
-    hooks:
-      - id: check-hooks-apply
-      # this is useful but problematic
-      # e.g. excluding recipes/*.yml, if they exist
-      # - id: check-useless-excludes
-  - repo: 'https://github.com/psf/black'
-    rev: 20.8b1
-    hooks:
-      - id: black
-  - repo: 'https://github.com/pre-commit/pre-commit-hooks'
-    rev: v3.4.0
-    hooks:
-      - id: fix-byte-order-marker
-      - id: end-of-file-fixer
-      - id: debug-statements
-      - id: check-toml
-      - id: check-json
-      - id: check-yaml
-        exclude: ^recipes/.*
-  - repo: 'https://github.com/Lucas-C/pre-commit-hooks-nodejs'
-    rev: v1.1.1
-    hooks:
-      - id: dockerfile_lint
+- hooks:
+  - id: check-hooks-apply
+  repo: meta
+- hooks:
+  - id: black
+  repo: https://github.com/psf/black
+  rev: 20.8b1
+- hooks:
+  - id: fix-byte-order-marker
+  - id: end-of-file-fixer
+  - id: debug-statements
+  - id: check-toml
+  - id: check-json
+  - exclude: ^recipes/.*
+    id: check-yaml
+  repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v3.4.0
+- hooks:
+  - id: dockerfile_lint
+  repo: https://github.com/Lucas-C/pre-commit-hooks-nodejs
+  rev: v1.1.1
+- hooks:
+  - id: commitizen
+    stages:
+    - commit-msg
+  repo: https://github.com/commitizen-tools/commitizen
+  rev: v2.14.0
