--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,23 +9,22 @@ on:
     - cron: 0 7 * * 6
 jobs:
   markdown-link-check:
+    name: Check Markdown links
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@master
     - uses: gaurav-nelson/github-action-markdown-link-check@v1
   analyse:
-    name: Analyze
+    name: Analyze with CodeQL
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
         with:
           fetch-depth: 2
-      - run: git checkout HEAD^2
-        if: '${{ github.event_name == ''pull_request'' }}'
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
-      - name: Autobuild
+      - name: Autobuild with CodeQL
         uses: github/codeql-action/autobuild@v1
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
