--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: read action options
+        id: read_options
+        run: |
+          json=`cat .github/action-options.json`
+          USE_SLACK=`echo $(jq -r '.use_slack' <<< "$json")`
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -48,3 +53,11 @@ jobs:
       - name: Publish to PyPi
         run: |
           poetry publish -vv --username __token__ --password ${{ secrets.PYPI_TOKEN }}
+      - name: Send Slack notification
+        uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,action,workflow
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+        if: always() && steps.read_options.outputs.USE_SLACK
