--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,4 +60,4 @@ jobs:
           fields: repo,message,commit,action,workflow
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
-        if: always() && steps.read_options.outputs.USE_SLACK
+        if: always() && steps.read_options.outputs.USE_SLACK=='true'
