fix: dockerfile sync

--- a/tyrannosaurus/resources/Dockerfile.txt
+++ b/tyrannosaurus/resources/Dockerfile.txt
@@ -3,24 +3,26 @@
 FROM python:3.9
 
 # See https://github.com/opencontainers/image-spec/blob/master/annotations.md
-LABEL name="$${project}" \
-      version="$${version}" \
-      vendor="$${user}" \
-      org.opencontainers.image.title="$${project}" \
-      org.opencontainers.image.version="$${version}" \
-      org.opencontainers.image.url="https://github.com/$${user}/$${project}" \
-      org.opencontainers.image.documentation="https://github.com/$${user}/$${project}"
+LABEL name="$${project}"
+LABEL version="$${version}"
+LABEL vendor="$${user}"
+LABEL org.opencontainers.image.title="$${project}"
+LABEL org.opencontainers.image.version="$${version}"
+LABEL org.opencontainers.image.url="https://github.com/$${user}/$${project}"
+LABEL org.opencontainers.image.documentation="https://github.com/$${user}/$${project}"
+
+# ENV no longer adds a layer in new Docker versions,
+# so we don't need to chain these in a single line
+ENV YOUR_ENV=${YOUR_ENV}
+ENV PYTHONFAULTHANDLER=1
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONHASHSEED=random
+ENV PIP_NO_CACHE_DIR=off
+ENV PIP_DISABLE_PIP_VERSION_CHECK=on
+ENV PIP_DEFAULT_TIMEOUT=120
+ENV POETRY_VERSION=1.1.4
 
 ARG YOUR_ENV
-
-ENV YOUR_ENV=${YOUR_ENV} \
-    PYTHONFAULTHANDLER=1 \
-    PYTHONUNBUFFERED=1 \
-    PYTHONHASHSEED=random \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=120 \
-    POETRY_VERSION=1.1.4
 
 # System deps:
 RUN pip install "poetry==$POETRY_VERSION"
@@ -35,3 +37,9 @@ RUN poetry config virtualenvs.create false \
 
 # Creating folders, and files for a project:
 COPY . /code
+
+# Now do something with it!
+# Perhaps run a command:
+# CMD $${pkg} --my --options --etc
+# or expose a port:
+# EXPOSE 443/tcp
