fix: prettier stage

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -58,4 +58,5 @@ repos:
   - repo: https://github.com/pre-commit/mirrors-prettier
     hooks:
       - id: prettier
+        stages: [commit]
     rev: v2.2.1
