--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,10 +10,10 @@ on:
 jobs:
   markdown-link-check:
     name: Check Markdown links
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - uses: gaurav-nelson/github-action-markdown-link-check@v1
+      - uses: actions/checkout@master
+      - uses: gaurav-nelson/github-action-markdown-link-check@v1
   analyse:
     name: Analyze with CodeQL
     runs-on: ubuntu-latest
