--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ on:
       - release-made
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -19,6 +19,7 @@ jobs:
         run: |
           json=`cat .github/action-options.json`
           USE_SLACK=`echo $(jq -r '.use_slack' <<< "$json")`
+          USE_GCR=`echo $(jq -r '.use_github_container_registry' <<< "$json")`
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -36,18 +37,38 @@ jobs:
       - name: Build the Docker image
         run: |
           docker build .
-      - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+        if: steps.read_options.outputs.USE_GCR!='true'
+      - name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: ${{ github.repository }}/${{ github.event.repository.name }}
-          tag_with_ref: true
-      - name: Attach artifacts to the Github release
+          images: ${{ github.repository }}/${{ github.event.repository.name }}
+          tag-semver: |
+            {{version}}
+            {{major}}.{{minor}}
+        if: steps.read_options.outputs.USE_GCR=='true'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        if: steps.read_options.outputs.USE_GCR=='true'
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_CONTAINER_REGISTRY_TOKEN }}
+        if: steps.read_options.outputs.USE_GCR=='true'
+      - name: Builder the Docker Image and push to the GitHub Container Registry
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: .
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
+        if: steps.read_options.outputs.USE_GCR=='true'
+      - name: Attach artifacts to the GitHub release
         uses: skx/github-action-publish-binaries@master
         with:
-          args: 'dist/*'
+          args: "dist/*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish to PyPi
