--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -8,19 +8,19 @@ on:
       - master
 jobs:
   build:
-    runs-on: ubuntu-20.04
     strategy:
       max-parallel: 1
       matrix:
-        python-version:
-          - 3.9
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        python-version: ["3.9"]
+    runs-on: "${{ matrix.os }}"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: 'Set up Python ${{ matrix.python-version }}'
+      - name: "Set up Python ${{ matrix.python-version }}"
         uses: actions/setup-python@v2
         with:
-          python-version: '${{ matrix.python-version }}'
+          python-version: "${{ matrix.python-version }}"
       - name: Install build meta-dependencies
         run: |
           pip install tox poetry
