feat: dockerfile improvement

--- a/tyrannosaurus/resources/Dockerfile.txt
+++ b/tyrannosaurus/resources/Dockerfile.txt
@@ -1,6 +1,14 @@
 # https://stackoverflow.com/questions/53835198/integrating-python-poetry-with-docker/54763270#54763270
 
+# Add a build argument that should either be 'true' or 'false'
+# If true, installs without dev dependencies (poetry --no-dev)
+ARG NO_DEV
+
 FROM python:3.9
+
+
+# --------------------------------------
+# ------------- Set labels -------------
 
 # See https://github.com/opencontainers/image-spec/blob/master/annotations.md
 LABEL name="$${project}"
@@ -11,9 +19,14 @@ LABEL org.opencontainers.image.version="$${version}"
 LABEL org.opencontainers.image.url="https://github.com/$${user}/$${project}"
 LABEL org.opencontainers.image.documentation="https://github.com/$${user}/$${project}"
 
+
+# --------------------------------------
+# ---------- Copy and install ----------
+
+# Configure env variables for build/install
 # ENV no longer adds a layer in new Docker versions,
 # so we don't need to chain these in a single line
-ENV YOUR_ENV=${YOUR_ENV}
+ENV NO_DEV=${NO_DEV}
 ENV PYTHONFAULTHANDLER=1
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONHASHSEED=random
@@ -22,23 +35,30 @@ ENV PIP_DISABLE_PIP_VERSION_CHECK=on
 ENV PIP_DEFAULT_TIMEOUT=120
 ENV POETRY_VERSION=1.1.4
 
-ARG YOUR_ENV
-
-# System deps:
+# Install system deps
 RUN pip install "poetry==$POETRY_VERSION"
 
 # Copy only requirements to cache them in docker layer
 WORKDIR /code
 COPY poetry.lock pyproject.toml /code/
 
-# Project initialization:
+# Install with poetry
+# pip install would probably work, too, but we'd have to make sure it's a recent enough pip
+# Don't bother creating a virtual env -- significant performance increase
 RUN poetry config virtualenvs.create false \
-  && poetry install $(test "$YOUR_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
+  && poetry install $(test "${NO_DEV}" == true && echo "--no-dev") --no-interaction --no-ansi
 
-# Creating folders, and files for a project:
+# Copy everything (code) to our workdir
+# Our .dockerignore file should be good enough that we don't have extra stuff
 COPY . /code
 
-# Now do something with it!
+
+# --------------------------------------
+# --------------- Run! -----------------
+
+# Now do something!
+CMD $${pkg} --help
+
 # Perhaps run a command:
 # CMD $${pkg} --my --options --etc
 # or expose a port:
