--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist = py39
 [testenv]
 whitelist_externals =
     poetry
+    /bin/sh
 skipdist = True
 # the - prefix means ignore nonzero exit codes
 commands =
@@ -25,6 +26,8 @@ commands =
     - poetry run flake8 tyrannosaurus
     - poetry run flake8 docs
     - poetry run flake8 --ignore=D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293 tests
+	poetry export --dev --without-hashes -f requirements.txt --output docs/requirements.txt
+    /bin/sh -c 'poetry version | cut -d " " -f1 >> {toxinidir}/docs/requirements.txt'
     poetry run sphinx-build -b html docs docs/html
 
 
