fix: dependabot config 'labels' key name

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,27 +1,28 @@
 version: 2
+# see options in https://docs.github.com/en/github/administering-a-repository/configuration-options-for-dependency-updates
 updates:
   - package-ecosystem: pip
     directory: /
     schedule:
       interval: weekly
-    default_labels: ["kind: infrastructure"]
+    labels: ["kind: infrastructure"]
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: weekly
-    default_labels: ["kind: infrastructure"]
+    labels: ["kind: infrastructure"]
   - package-ecosystem: docker
     directory: /
     schedule:
       interval: weekly
-    default_labels: ["kind: infrastructure"]
+    labels: ["kind: infrastructure"]
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
       interval: "daily"
-    default_labels: ["kind: infrastructure"]
+    labels: ["kind: infrastructure"]
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
-    default_labels: ["kind: infrastructure"]
+    labels: ["kind: infrastructure"]
