--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,8 +148,8 @@ coverage                 = {extras = ["toml"], version = "^5"}
 pytest-cov               = "^2"
 flake8                   = "^3"
 flake8-docstrings        = "^1"
-flake8-bugbear           = "^20"
-mypy                     = ">=0.790, <1.0"
+flake8-bugbear           = ">=21"
+mypy                     = ">=0.812, <1.0"
 sphinx                   = "^3"
 sphinx-autoapi           = "^1"
 sphinx-copybutton        = ">=0.3, <1.0"
