--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "tyrannosaurus"
-version = "0.10.0"
+version = "0.10.1"
 description = "Generate beautifully modern Python projects with seamless, GitHub-based CI/CD and loads of integrations."
 authors = ["Douglas Myers-Turnbull"]
 maintainers = ["Douglas Myers-Turnbull"]
@@ -139,10 +139,10 @@ requests                 = ">=2.24, <3"
 grayskull                = ">=0.8.5, <1"
 
 [tool.poetry.dev-dependencies]
-pre-commit               = ">=2.12, <3.0"
-pre-commit-hooks         = ">=3.4, <4.0"
+pre-commit               = ">=2.13, <3.0"
+pre-commit-hooks         = ">=4.0, <5.0"
 bandit                   = ">=1.7, <2.0"
-black                    = {git = "https://github.com/psf/black.git", rev="692c0f50d91"}
+black                    = "==21.5b1"
 pytest                   = "^6"
 coverage                 = {extras = ["toml"], version = "^5"}
 pytest-cov               = "^2"
@@ -150,7 +150,7 @@ flake8                   = "^3"
 flake8-docstrings        = "^1"
 flake8-bugbear           = ">=21"
 mypy                     = ">=0.812, <1.0"
-sphinx                   = "^3"
+sphinx                   = "^4"
 sphinx-autoapi           = "^1"
 sphinx-copybutton        = ">=0.3, <1.0"
 sphinx-rtd-theme         = ">=0.5, <1.0"
