--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,27 @@
 # NOTE: We're only including things that would already be checked in to the repo
 # So we're not including things like .tox -- that will never be committed
 # We're excluding docs and tests
-./tests
-./docs
-./.github
-./.dist
-./.circleci
-./.travis.yml
-./.appveyor.yml
-./.coverage
-./.codeclimate.yml
-./.coveralls.yml
-./.dockerignore
-./readthedocs.yml
-./.git
-./.gitignore
-./recipes
-./azure-pipelines.yml
+tests
+docs
+.github
+.circleci
+.travis.yml
+.appveyor.yml
+.coverage
+.codeclimate.yml
+.coveralls.yml
+.dockerignore
+readthedocs.yml
+.git
+.gitignore
+recipes
+azure-pipelines.yml
+CONTRIBUTING.md
+CHANGELOG.md
+.editorconfig
+.pre-commit-config.yaml
+SECURITY.md
+.scrutinizer.yml
+codemeta.json
+CITATION.cff
+Vagrantfile
