--- a/.github/workflows/pull-test.yml
+++ b/.github/workflows/pull-test.yml
@@ -4,6 +4,7 @@ name: Test on pull request
 on:
   pull_request:
     branches: [main, master]
+    paths-ignore: ["**/*.md", "**/*.rst"]
 jobs:
   build:
     strategy:
