--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,12 +2,11 @@ version: 2
 sphinx:
   configuration: docs/conf.py
 build:
-  image: latest
+  image: testing
 python:
-  version: 3.8
+  version: 3.9
   install:
-    -
-      requirements: docs/requirements.txt
+    - requirements: docs/requirements.txt
 # Using this requirements.txt is currently unavoidable
 # This is because pip does not understand poetry's dev-dependencies
 # To get pip to install the dependencies from pyproject.toml here,
