--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 indent_style = space
 
-[*.{yml,yaml,json,scala,coffee,css,js,sh,sql,tex,xml,html,htm,hs,ml,pp,R,rb}]
+[*.{yml,yaml,json,scala,sbt,coffee,css,js,sh,sql,tex,xml,html,htm,hs,ml,pp,R,rb}]
 indent_size = 2
 
 [*.md]
