--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,6 +21,12 @@ repos:
       - id: check-merge-conflict
       - id: check-toml
       - id: check-json
+      - id: fix-encoding-pragma
+        args: ["--remove"]
+      - id: check-executables-have-shebangs
+      - id: check-shebang-scripts-are-executable
+      - id: trailing-whitespace
+        args: ["--markdown-linebreak-ext=md"]
       # This one is slow and doesn't check for much
       # - detect-private-key
       # This is very slow, so I recommend disabling it.
@@ -36,14 +42,14 @@ repos:
       - id: commitizen
         stages: ["commit-msg"]
     repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.17.8
+    rev: v2.17.9
 
   # --- Strip output from .ipynb files ---
   - hooks:
       - id: nbstripout
         files: ".ipynb"
     repo: https://github.com/kynan/nbstripout
-    rev: 0.3.9
+    rev: 0.4.0
 
   # --- Linters ---
   - hooks:
@@ -54,9 +60,13 @@ repos:
       - id: black
     repo: https://github.com/psf/black
     rev: 21.5b2
+  - repo: https://github.com/asottile/blacken-docs
+    rev: v1.10.0
+    hooks:
+      - id: blacken-docs
   - repo: https://github.com/pre-commit/mirrors-prettier
     hooks:
       - id: prettier
         stages: [commit]
         exclude: ^recipes/.*
-    rev: v2.2.1
+    rev: v2.3.1
