--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -137,7 +137,7 @@ branches:
       required_pull_request_reviews:
         required_approving_review_count: 1
         dismiss_stale_reviews: true
-        require_code_owner_reviews: true
+        require_code_owner_reviews: false
       required_status_checks:
         strict: true
         contexts:
