--- a/recipes/tyrannosaurus/meta.yaml
+++ b/recipes/tyrannosaurus/meta.yaml
@@ -48,7 +48,7 @@ about:
   description: |
     An opinionated, forwards-looking Python template for 2021. Generate elegant, ready-to-use Python
     projects that have excellent continuous integration and deployment (CI/CD). Integrated with
-    Docker Hub, Github Packages, Azure, Conda-Forge, and an array of linting, static analysis,
+    Docker Hub, the GitHub Container Registry, Azure, Conda-Forge, and an array of linting, static analysis,
     security testing, documentation, dependency management, and CI/CD tools, including a custom tool
     to keep all duplicate project metadata synchronized to a single pyproject.toml. You only need to
     interact with your project via git, tyrannosaurus, and Github releases – all other integrations
