--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,6 +2,11 @@ build:
   environment:
     python: 3.9.5
   nodes:
+    my-tests:
+      dependencies:
+        before:
+          - "pip install --upgrade 'tox>=3.21,<4.0'"
+          - "pip install --upgrade 'poetry>=1.1.4,<2.0'"
     analysis:
       tests:
         override:
