--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,10 @@ jobs:
         uses: actions/checkout@v2
       - name: read action options
         id: read_options
-        run: |
-          json=`cat .github/action-options.json`
-          USE_SLACK=`echo $(jq -r '.use_slack' <<< "$json")`
+        uses: notiz-dev/github-action-json-property@release
+        with: 
+          path: .github/action-options.json
+          prop_path: 'use_slack'
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -38,17 +39,19 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver: docker # defaults to "docker-containerized"
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push
+      - name: Build and push to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
+          tags: ${{ GITHUB_REPOSITORY }}/${{ github.event.release.tag_name }}
       - name: Attach artifacts to the GitHub release
         uses: skx/github-action-publish-binaries@master
         with:
