fix: don't try to fix in test/resources

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
       - id: check-case-conflict
       - id: fix-byte-order-marker
       - id: end-of-file-fixer
+        exclude: "^tests/resources/"
       - id: check-merge-conflict
       - id: check-toml
       - id: check-json
