--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -7,7 +7,7 @@ repository:
   name: "tyrannosaurus"
 
   # A short description of the repository that will show up on GitHub
-  description: "Generate beautifully modern Python projects with seamless, Github-based CI/CD and loads of integrations."
+  description: "Generate beautifully modern Python projects with seamless, GitHub-based CI/CD and loads of integrations."
 
   homepage: "https://github.com/dmyersturnbull/tyrannosaurus"
 
